BusOne/src/objects/Remote_Meeting_Attendee_vod__c.object
<CustomObject>
    <description>Maintains the data of the attendees who joined the remote meeting</description>
    <fields>
        <fullName>Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Call that the attendee is associated with</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Remote Meeting Attendees</relationshipLabel>
        <relationshipName>Remote_Meeting_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_vod__c</fullName>
        <description>Show the device type the Remote Meeting Attendee used to join the meeting</description>
        <label>Device</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the EM Attendee that the participant is associated with</description>
        <label>Event Attendee</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Remote Meeting Attendees</relationshipLabel>
        <relationshipName>Remote_Meeting_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Event_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the EM Speaker that the participant is associated with</description>
        <label>Event Speaker</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Remote Meeting Attendees</relationshipLabel>
        <relationshipName>Remote_Meeting_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Remote Meeting Attendees</relationshipLabel>
        <relationshipName>Remote_Meeting_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Join_Time_vod__c</fullName>
        <description>Date and time of when the attendee joined the meeting</description>
        <label>Join Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leave_Time_vod__c</fullName>
        <description>Date and time of when the attendee left the meeting</description>
        <label>Leave Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Time_vod__c</fullName>
        <description>Date and time of when the meeting ended</description>
        <label>Meeting End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Time_vod__c</fullName>
        <description>Date and time of when the meeting started</description>
        <label>Meeting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name_vod__c</fullName>
        <description>Name entered by the attendee when joining the Remote Meeting</description>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Type_vod__c</fullName>
        <description>Show the network type the Remote Meeting Attendee used to join the meeting</description>
        <label>Network Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Id_vod__c</fullName>
        <description>Participant Id for the attendee when joining the Remote Meeting</description>
        <label>Participant Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Meeting_vod__c</fullName>
        <description>Remote meeting the attendee participated in</description>
        <label>Remote Meeting</label>
        <referenceTo>Remote_Meeting_vod__c</referenceTo>
        <relationshipLabel>Remote Meeting Attendees</relationshipLabel>
        <relationshipName>Remote_Meeting_Attendees_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Veeva_Remote_Meeting_Id_vod__c</fullName>
        <description>Remote Meeting Id entered by the attendee when joining the Remote Meeting</description>
        <label>Veeva Remote Meeting Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Remote Meeting Attendee</label>
    <nameField>
        <label>Remote Meeting Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remote Meeting Attendees</pluralLabel>
    <recordTypes>
        <fullName>Call_vod</fullName>
        <active>true</active>
        <description>For Remote Meeting Attendees on Call</description>
        <label>Call_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar_vod</fullName>
        <active>false</active>
        <description>For Remote Meeting Attendees on Webinar</description>
        <label>Webinar_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>